--- a/package.json
+++ b/package.json
@@ -11,45 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.1",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.1",
-    "@angular/compiler": "~11.0.1",
-    "@angular/core": "~11.0.1",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.0.1",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.1",
-    "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
-    "firebase": "^7.0 || ^8.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/fire": "^6.1.5",
+    "@angular/forms": "^11.0.9",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "firebase": "^8.10.0",
+    "grpc": "^1.24.11",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.10.2"    
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1200",
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/architect": "^0.1102.14",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "^11.0.9",
+    "@types/jasmine": "^3.6.11",
+    "@types/node": "^12.20.22",
+    "codelyzer": "^6.0.2",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
+    "inquirer-autocomplete-prompt": "^1.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "open": "^7.0.3",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "open": "^7.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.8"
+    
   }
 }
